--- a/Дополнительные сведенья.html
+++ b/Дополнительные сведенья.html
@@ -34,9 +34,9 @@
 <!-- Tab content -->
 <div id="London" class="tabcontent">
   <h3>Расширенное досье</h3>
-  <p class='tab-text'><h4>Подробная характеристика О’Флинна</h4>
+  <p class='tab-text'><h4>Подробная характеристика О’Флинна:</h4>
 Дэниел О’Флинн — мужчина 28 лет, рост выше среднего, брюнет с карими глазами. Имеет второе имя - Коналл. Орлиный нос, лицо прямоугольное с ярко выраженными скулами. Британец, но сам себя называет ирландцем. Попал в ряды фонда благодаря отличной характеристике, данной ему бывшим командиром, под чьим командованием он служил в Сирии. Служил в RAF (Королевские военно-воздушные силы Великобритании), умеет пилотировать легкие двухдвигательные и одномоторные вертолеты. Намного лучше себя показал, как пехотинец, снайпер или оператор бортового пулемета. Неконфликтный, строго выполняет приказы вышестоящих, надежный боец. Негативных привычек обнаружено не было. На собеседовании проявил хорошие знания русского языка, слегка знает арабский и немецкий. Хорошо обращается с оружием блока НАТО, особенно платформы AR-15 и SA-80. Имеет небольшой опыт использования оружия платформы AK. 
-<br>
+<h4>Работа в Фонде:</h4>
 Субъект проходил первоначальный курс обучения в Зоне 44 в Эссексе, Англия. По завершению КМБ был перенаправлен в Зону 80K, ввиду переизбытка кадров на месте и недостатка его в Зонах проекта FC. Благодаря знанию русского языка быстро освоился и почти сразу был перенаправлен в Зону 78N, уже на полноценную должность.
 </p>
 </div>
@@ -58,8 +58,12 @@
 <p>Темперамент — флегматический<br>
 Тип личности — психастенический<br>
 Присутствуют признаки алекситимии второго типа, но полученных данных недостаточно для подтверждения диагноза.</p>
-
-Стенограмма диалога с главным психологом Зоны 78N, Юки-чико Юри:<br>
+<hr>
+<h5>Стенограмма диалога с главным психологом Зоны 78N, Юки-чико Юри:</h5>
+   <div class='dialogue'>
+   <p><strong>Юки-чико:</strong> </p>
+   <p><strong>О'Флинн:</strong> </p>
+   </div>
 
 <strong>Примечание:</strong>
 </p>
@@ -67,7 +71,19 @@
 
 <div id="Tokyo" class="tabcontent">
   <h3>Отзывы сотрудников</h3>
-  <p class='tab-text'>Tokyo is the capital of Japan.</p>
+  <p class='tab-text'><h4>Отрывок из делового дневника начальника службы безопасности, майора Такаямы:</h4>
+<p><i>22/05/2019</i></p>
+О'Флинн - назначен в нашу зону охранником. Вот уж не ожидал увидеть здесь британца. Всегда серьезный такой, на все мои вопросы отвечает как армеец до мозга костей, хотя я ему намекал, что можно быть чуть менее формальным. С коллегами общий язык нашел быстро, но сам по себе вроде неразговорчивый, быть может это его алекситимия виновата. Ну, главное что задачи выполняет хорошо, и на том спасибо.
+
+<h4>Из воспоминаний менеджера отдела кадров административной службы, Пейни Майкла:<h4>
+<p><i>17/05/2019</i></p>
+…Касательно Дэниела О'Флинна, он во время беседы слегка нервничал, пару раз переходил на английский. Видно, что ещё не до конца привык к смене обстановки, понять его можно, все через это проходили. В связи с этим, пока рано будет ставить его на должность предполагающую знания превосходного русского. Лучшее место сейчас для него будет - помощник надзирателя, в блоке класса D. Ну это уж пусть Такаяма решает…
+
+<h4>Дисциплинарный журнал Зоны 78N</h4>
+<p><i>Запись 78-14-0093</i></p>
+Агенту Тайрет и агенту О'Флинну было выдано письменное замечание ввиду чрезмерного употребления алкоголесодержащих напитков на территории комплекса. В качестве исправительной процедуры, они будут обязаны каждый будний день в течении месяца оставаться на ночное дежурство в административном крыле основного здания. Решение обжалованию не подлежит.
+<div style='text-align: right;'><p><i>07/01/2020</i></p></div>
+</p>
 </div>
      
      </div>
