--- a/Дополнительные сведенья.html
+++ b/Дополнительные сведенья.html
@@ -75,7 +75,7 @@
 <p><i>22/05/2019</i></p>
 О'Флинн - назначен в нашу зону охранником. Вот уж не ожидал увидеть здесь британца. Всегда серьезный такой, на все мои вопросы отвечает как армеец до мозга костей, хотя я ему намекал, что можно быть чуть менее формальным. С коллегами общий язык нашел быстро, но сам по себе вроде неразговорчивый, быть может это его алекситимия виновата. Ну, главное что задачи выполняет хорошо, и на том спасибо.
 
-<h4>Из воспоминаний менеджера отдела кадров административной службы, Пейни Майкла:<h4>
+<h4>Из воспоминаний менеджера отдела кадров административной службы, Пейни Майкла:</h4>
 <p><i>17/05/2019</i></p>
 …Касательно Дэниела О'Флинна, он во время беседы слегка нервничал, пару раз переходил на английский. Видно, что ещё не до конца привык к смене обстановки, понять его можно, все через это проходили. В связи с этим, пока рано будет ставить его на должность предполагающую знания превосходного русского. Лучшее место сейчас для него будет - помощник надзирателя, в блоке класса D. Ну это уж пусть Такаяма решает…
 
