--- a/Дополнительные сведенья.html
+++ b/Дополнительные сведенья.html
@@ -12,14 +12,14 @@
     <div style="display: flex;align-items: center;"><div class="logo"><img src="https://i.ibb.co/Gxk4Lny/RAISA1.png" border="0" width="100%"></div>
     <div class="header1"><div class="head-text1">Архив АПАИБ</div><div class="head-text2">Администрация по архивно-информационной безопасности</div></div>
   </div>
-   <div class="site78n-notice">Каталог Зоны 78N</div>
+   <div class="site78n-notice">Российский Филиал</div>
 </div>
 
 
 <div class='document'>
   <div style='max-width: calc(70ch + 3.24em); margin: auto;padding-top: 10%;padding-left: 0.5em;padding-right: 0.5em;'>
    <h1>Дополнительные сведенья</h1>
-   <div class="notice"><div style='margin-right: 1.5em;'>≣ Необходим 4 УД</div><div style='margin-right: 1.5em;'>агент Кёрли</div><div style='margin-right: 1.5em;'>25.06.2021</div>
+   <div class="notice"><div style='margin-right: 1.5em;'>≣ Необходим 4 УД</div><div style='margin-right: 1.5em;'>агент Кёрли</div><div style='margin-right: 1.5em;'>25.08.2020</div>
    </div>
    <h2>XX-9420-DO | Дэниел О'Флинн (Коналл)</h2>
 
@@ -35,9 +35,15 @@
 <div id="London" class="tabcontent">
   <h3>Расширенное досье</h3>
   <p class='tab-text'><h4>Подробная характеристика О’Флинна:</h4>
-Дэниел О’Флинн — мужчина 28 лет, рост выше среднего, брюнет с карими глазами. Имеет второе имя - Коналл. Орлиный нос, лицо прямоугольное с ярко выраженными скулами. Британец, но сам себя называет ирландцем. Попал в ряды фонда благодаря отличной характеристике, данной ему бывшим командиром, под чьим командованием он служил в Сирии. Служил в RAF (Королевские военно-воздушные силы Великобритании), умеет пилотировать легкие двухдвигательные и одномоторные вертолеты. Намного лучше себя показал, как пехотинец, снайпер или оператор бортового пулемета. Неконфликтный, строго выполняет приказы вышестоящих, надежный боец. Негативных привычек обнаружено не было. На собеседовании проявил хорошие знания русского языка, слегка знает арабский и немецкий. Хорошо обращается с оружием блока НАТО, особенно платформы AR-15 и SA-80. Имеет небольшой опыт использования оружия платформы AK. 
+Дэниел О’Флинн — мужчина 28 лет, рост выше среднего, брюнет с карими глазами. Орлиный нос, лицо прямоугольное с ярко выраженными скулами. Имеет второе имя - Коналл. Британец, но сам себя называет ирландцем. Попал в ряды фонда благодаря отличной характеристике, данной ему бывшим командиром, под чьим командованием он служил в Сирии. Служил в RAF (Королевские военно-воздушные силы Великобритании), умеет пилотировать легкие двухдвигательные и одномоторные вертолеты. Намного лучше себя показал, как пехотинец, снайпер или оператор бортового пулемета. Неконфликтный, строго выполняет приказы вышестоящих, надежный боец. Негативных привычек обнаружено не было. На собеседовании проявил хорошие знания русского языка, слегка знает арабский и немецкий. Хорошо обращается с оружием блока НАТО, особенно платформы AR-15 и SA-80. Имеет небольшой опыт использования оружия платформы AK. Имеется заболевание, симптомами напоминающее алекситимию 2 типа, появилось в результате участия в боевых действиях в Сирии, незначительно сказывается на выполнении им должностных обязанностей.
 <h4>Работа в Фонде:</h4>
 Субъект проходил первоначальный курс обучения в Зоне 44 в Эссексе, Англия. По завершению КМБ был перенаправлен в Зону 80K, ввиду переизбытка кадров на месте и недостатка его в Зонах проекта FC. Благодаря знанию русского языка быстро освоился и почти сразу был перенаправлен в Зону 78N, уже на полноценную должность.
+
+<div style='background: #cccccc;color: black; padding: 0.5em; font: small-caption;'><span style="font-weight: bold;font-size: larger;margin-bottom: 0.5em">Приказ №78-14-220420</span><p>Приказываю назначить агента О'Флинна Дэниела на должность часового при КПП административного крыла. С текущих назначений снять.</p>
+<p><i>Начальник службы безопасности Зоны 78N, Майор Такаяма Неро.</i></p>
+<div style='text-align: end;'><b>Утверждено:</b> <i>Зав. секрктарь административной службы зоны 78N, Гарден Алекс Эвер</i></div></div>
+
+
 </p>
 </div>
 
