--- a/Дополнительные сведенья.html
+++ b/Дополнительные сведенья.html
@@ -39,7 +39,7 @@
 <h4>Работа в Фонде:</h4>
 Субъект проходил первоначальный курс обучения в Зоне 44 в Эссексе, Англия. По завершению КМБ был перенаправлен в Зону 80K, ввиду переизбытка кадров на месте и недостатка его в Зонах проекта FC. Благодаря знанию русского языка быстро освоился и почти сразу был перенаправлен в Зону 78N, уже на полноценную должность.
 
-<div style='background: #cccccc;color: black; padding: 0.5em; font: small-caption;'><span style="font-weight: bold;font-size: larger;margin-bottom: 0.5em">Приказ №78-14-220420</span><p>Приказываю назначить агента О'Флинна Дэниела на должность часового при КПП административного крыла. С текущих назначений снять.</p>
+<div class='order'>Приказ №78-14-220420</span><p>Приказываю назначить агента О'Флинна Дэниела на должность часового при КПП административного крыла. С текущих назначений снять.</p>
 <p><i>Начальник службы безопасности Зоны 78N, Майор Такаяма Неро.</i></p>
 <div style='text-align: end;'><b>Утверждено:</b> <i>Зав. секрктарь административной службы зоны 78N, Гарден Алекс Эвер</i></div></div>
 
@@ -89,6 +89,12 @@
 <p><i>Запись 78-14-0093</i></p>
 Агенту Тайрет и агенту О'Флинну было выдано письменное замечание ввиду чрезмерного употребления алкоголесодержащих напитков на территории комплекса. В качестве исправительной процедуры, они будут обязаны каждый будний день в течении месяца оставаться на ночное дежурство в административном крыле основного здания. Решение обжалованию не подлежит.
 <div style='text-align: right;'><p><i>07/01/2020</i></p></div>
+
+<h4>Запись в деловом дневнике фельдшер-лаборанта медицинской службы, Арито Сноу:</h4>
+<p><i>02/06/2019</i></p>
+“О вы из Англии?”, - спросил я его. По его выражению лица было ясно, что слышал он это не один раз, и не два. Ответ был короткий, - “Я ирландец”. Вау, у нас в Зоне много японцев, китайцев и даже корейцев; выглядело так, будто он просто заблудился. Стоит ли говорить, что диалога с ним не вышло.
+
+
 </p>
 </div>
      
