--- a/Дополнительные сведенья.html
+++ b/Дополнительные сведенья.html
@@ -39,7 +39,7 @@
 <h4>Работа в Фонде:</h4>
 Субъект проходил первоначальный курс обучения в Зоне 44 в Эссексе, Англия. По завершению КМБ был перенаправлен в Зону 80K, ввиду переизбытка кадров на месте и недостатка его в Зонах проекта FC. Благодаря знанию русского языка быстро освоился и почти сразу был перенаправлен в Зону 78N, уже на полноценную должность.
 
-<div class='order'>Приказ №78-14-220420</span><p>Приказываю назначить агента О'Флинна Дэниела на должность часового при КПП административного крыла. С текущих назначений снять.</p>
+<div class='order'><span style='font-size: larger;font-variant-numeric: slashed-zero;font-weight: bolder;'>Приказ №78-14-220420</span><p>Приказываю назначить агента О'Флинна Дэниела на должность часового при КПП административного крыла. С текущих назначений снять.</p>
 <p><i>Начальник службы безопасности Зоны 78N, Майор Такаяма Неро.</i></p>
 <div style='text-align: end;'><b>Утверждено:</b> <i>Зав. секрктарь административной службы зоны 78N, Гарден Алекс Эвер</i></div></div>
 
