--- a/i_hate_them_die.html
+++ b/i_hate_them_die.html
@@ -8,7 +8,7 @@
   <title>I hate them die</title>
 </head>
 
-<body style='margin: 1em'><div style='max-width: 1200px'>
+<body style='margin: 1em;color: white;background-blend-mode: hard-light;background: black;font-family: system-ui;background-image: url(https://media1.giphy.com/media/26xBFB9pA6Rjv2s7u/giphy.gif?cid=ecf05e47bunxllg4g80bmf19mh443n2u3ecszfe8i6dz55v2&rid=giphy.gif&ct=g);background-size: cover;'><div style='max-width: 1200px'>
   Что-то недвижимое. Что-то твёрдое. Что-то быстрое. Что-то липкое. Что-то маленькое. Что-то непримичательное. Что-то ходит. Кто-то ходит рядом. Много кого-то. 
 </div></body>
 
