--- a/i_hate_them_die.html
+++ b/i_hate_them_die.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="XXX" />
+  <link rel="stylesheet" href="XXX.css" />
   <link rel="icon" href="XXX">
   <title>I hate them die</title>
 </head>
 
-<body style='margin: 1em;color: white;background-blend-mode: hard-light;background: black;font-family: system-ui;background-image: url(https://media1.giphy.com/media/26xBFB9pA6Rjv2s7u/giphy.gif?cid=ecf05e47bunxllg4g80bmf19mh443n2u3ecszfe8i6dz55v2&rid=giphy.gif&ct=g);background-size: cover;'><div class='XXX'>
+<body><div class='XXX'>
   Что-то недвижимое.
 </div></body>
 
