--- a/i_hate_them_die.html
+++ b/i_hate_them_die.html
@@ -8,7 +8,7 @@
   <title>I hate them die</title>
 </head>
 
-<body><div class='XXX'>
+<body><div class='noise'></div><div class='XXX'>
   Что-то недвижимое.
 </div></body>
 
