--- a/Дополнительные сведенья.html
+++ b/Дополнительные сведенья.html
@@ -28,7 +28,7 @@
      <!-- Tab links -->
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'London')">Расш. Досье</button>
-  <button class="tablinks" onclick="openCity(event, 'Paris')">Мед. Справка</button>
+  <button class="tablinks" onclick="openCity(event, 'Paris')">Мед. Справ.</button>
   <button class="tablinks" onclick="openCity(event, 'Tokyo')">Отзывы</button>
 </div>
 <!-- Tab content -->
