--- a/Дополнительные сведенья.html
+++ b/Дополнительные сведенья.html
@@ -70,11 +70,20 @@
 <hr>
 <h4>Стенограмма диалога с главным психологом Зоны 78N, Юки-чико Юри:</h4>
    <div class='dialogue'>
-   <p><strong>Юки-чико:</strong> </p>
-   <p><strong>О'Флинн:</strong> </p>
+   <p><strong>Юки-чико:</strong> Здравствуйте Дэниел, как самочувствие?</p>
+   <p><strong>О'Флинн:</strong> Неплохо, спасибо.</p>
+   <p><strong>Юки-чико:</strong> Вы быстро освоились, вам не привыкать, верно?</p>
+   <p><strong>О'Флинн:</strong> Ну.. можно и так сказать.. да.</p>
+   <p><strong>Юки-чико:</strong> Ваша характеристика, данная нам коллегами из Зоны 44, говорит о вас как о усердном сотруднике, вы с энтузиазмом воспринимаете Фонд SCP, что вас привлекает в работе на Фонд?</p>
+   <p><strong>О'Флинн:</strong> Эх.. в целом.. мне кажется правильной идея поддержания нормальности, я ради этого и.. вступил в RAF. Сражаться с терроризмом, дабы у гражданских людей была мирная и спокойная жизнь… Я нахожу здесь схожести.. с идей Фонда..</p>
+   <p><strong>Юки-чико:</strong> Хм… Да, действительно.. Еще хотелось бы вас спросить, нет ли у вас трудностей с адаптацией. Такая резкая смена обстановки может сильно давить.</p>
+   <p><strong>О'Флинн:</strong> Я не думаю.. что дело в этом, мэм.</p>
+   <p><strong>Юки-чико:</strong> А что же вас так  беспокоит Дэниел?</p>
+   <p><strong>О'Флинн:</strong> Нет, все отлично… правда.</p>
+   <p><strong>Юки-чико:</strong> Кхм… Подождите одну минуту, пожалуйста.</p>
    </div>
 
-<strong>Примечание:</strong>
+<strong>Примечание:</strong> сеанс с Юки-чико был закончен досрочно. Собеседник Дэниела был заменён на врача-психиатра Вэя Ли. Под его присмотром диалог прошёл без эксцессов.
 </p>
 </div>
 
@@ -97,7 +106,14 @@
 <p><i>02/06/2019</i></p>
 “О вы из Англии?”, - спросил я его. По его выражению лица было ясно, что слышал он это не один раз, и не два. Ответ был короткий, - “Я ирландец”. Вау, у нас в Зоне много японцев, китайцев и даже корейцев; выглядело так, будто он просто заблудился. Стоит ли говорить, что диалога с ним не вышло.
 
-
+<h4>Из диалога врача-психиатра, Вэя Ли, и зам. главврача, Ледлоффа Ивана.</h4>
+<p><i>14/05/2019</i></p>
+<p>- Почему в первый раз не вышло?</p>
+<p>- Сильное волнение, он аж весь покраснел. Когда я с ним общался, такого не повторялось.</p>
+<p>- И с чем же это было связано?</p>
+<p>- Есть у меня догадочка, кажется мне, что он болеет.</p>
+<p>- Ну раз болеет, надо лечить.</p>
+<p>- Ох, друг мой, эта болезнь не лечится, и нет от нее спасения.</p>
 </p>
 </div>
      
