--- a/index.html
+++ b/index.html
@@ -4,67 +4,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://i.ibb.co/dW67VT2/lrp-big.png">
-  <title>site78n/info</title>
+  <title>PRINCE | Авторская страница</title>
 </head>
+
+<!--  Для тех, кто умеет пользоваться кодом элемента скажу, тут много интересного, просто надо поискать. !-->
+
 <html>
 <body>
-<div class='header'>
-  <div class='logo-header'><img src="https://i.ibb.co/dW67VT2/lrp-big.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>Зона 78N</div><div class='text-header1'>Российский Филиал</div></div>
-</div>
-<div style='max-width: 850px;margin: auto;'><h1>Досье Учреждения: Зона 78N</h1></div>
-  <div style="center no-repeat ; float: center; border: solid 2px #000000; padding: 1px 15px; margin: 10px 10px 10px 0px; box-shadow: 0 1px 3px rgba(0,0,0,0);max-width: 800px;margin: auto;">
-<div style="text-align: center;">
-<h2><span><strong>Досье Учреждения Фонда SCP</strong></span></h2>
-<h3><span><strong>Зона содержания 78N</strong></span></h3>
-<p><strong>Официальное обозначение:</strong> Аяно-Майское учреждение исследования и содержания при фонде SCP</p>
-<p><strong>Идентификационный код Зоны:</strong> RCSS-SITE-78N</p>
-</div>
-<hr>
-<div style="text-align: center;">
-<h3 id="toc3"><span>Общая информация</span></h3>
-</div>
-<br>
-<strong>Дата основания:</strong> [ОЖИДАЕТ РАСШИФРОВКИ]
-<p><strong>Директор зоны:</strong> Марков Э.</p>
-<div style='float: right; width: 30%;'><img src="https://i.ibb.co/7QwBDMZ/site78n.png" width='100%%' alt="site78n" border="0"></div>
-<strong>Расположение:</strong> Аяно-Майский район, Хабаровский край, Россия
-<p><strong>Прикрытие:</strong> Метеостанция Курун-Урях</p>
-<p><strong>Функции Зоны:</strong> Содержание SCP объектов класса безопасный и евклид, исследование аномалий, обучение персонала, хранение аномальных предметов.</p>
-<p><strong>Площадь внутреннего периметра:</strong> 0.9 км<sup>2</sup></p>
-<p><strong>Площадь внешнего периметра:</strong> 2.2 км<sup>2</sup></p>
-<hr>
-<div style="text-align: center;">
-<h3><span>Помещения</span></h3>
-</div>
-<div style='float: right; width: 30%;'><a href="https://i.ibb.co/0B3YRtF/site78nplan.png"><img src="https://i.ibb.co/0B3YRtF/site78nplan.png" width='100%'alt="план зоны 78N в разрезе" border="0"></a></div>
-<strong>Поверхность:</strong><br>
-Главные офисы, жилые помещения, медицинский центр, складские помещения.
-<p><strong>Комплекс:</strong><br>
-Зоны содержания SCP, камеры класса D, лаборатория экспериментов, офисы, контрольно-пропускной пункт охраны.</p>
-<p><strong>Зоны содержания:</strong><br>
-Ограниченная зона содержания, зона содержания SCP-предметов, склад хранения АП (аномальных предметов), камера содержания SCP-457.<br></p>
-<div style="text-align: center;">
-<hr>
-<h3><span>Персонал</span></h3>
-<div style=" border: solid 2px #000; padding: 1px 15px; box-shadow: 0 1px 3px rgba(0,0,0,.2);">
-<h5><span>ВНИМАНИЕ! В СВЯЗИ С ИНЦИДЕНТОМ-78N-SHINIGAMI ДАННАЯ ИНФОРМАЦИЯ ВРЕМЕННО НЕДОСТУПНА</span></h5>
-<h5><span>ОТЧЕТ ОБ ИНЦИДЕНТЕ НАПРАВЛЕН В ОВБ</span></h5>
-</div>
-</div>
-<div style="text-align: justify;">
-<div style="text-align: center;">
-<h3><span>Объекты, находящиеся на содержании зоны 78N</span></h3>
-<div style="border: solid 2px #000; padding: 1px 15px; box-shadow: 0 1px 3px rgba(0,0,0,.2);">
-<h5><span>ВНИМАНИЕ! В СВЯЗИ С ИНЦИДЕНТОМ-78N-SHINIGAMI ДАННАЯ ИНФОРМАЦИЯ ВРЕМЕННО НЕДОСТУПНА</span></h5>
-<h5><span>ОТЧЕТ ОБ ИНЦИДЕНТЕ НАПРАВЛЕН В ОВБ</span></h5>
-</div>
-<hr>
-<h3><span>Дополнительная информация</span></h3></div>
-Зона 78N была первоначально создана как складской сектор содержания аномальных предметов, не обладающих достаточными аномальными свойствами для классификации их как отдельных SCP объектов, но по мере развития приобрела и другие функции, такие как исследовательские и содержательные. Благодаря относительной безопасности зоны, она так же стала местом начала стажировки и обучения многих сотрудников Фонда. Географическое положение участка привлекает многих специалистов из Японии, Кореи, Китая. Зона представляет малую ценность для групп интереса, рейды враждебных группировок явление крайне редкое. Ввиду специфики зоны, она не обладает ядерным зарядом Alpha/Omega, тем не менее в конструкции предусмотрен взрывоустойчивый слой из титана (Ti) - 10м, свинца (Pb) 25м и вольфрама (W) 20м, защитный слой способен выдержать непосредственный взрыв мощностью 10-15 Мт и в крайнем случае зона может служить бункером. Нужда в D классе в зоне небольшая (средняя потребность зоны 9-17 сотрудников класса D в месяц), в основном они используются для обучения сотрудников СБ, оставшиеся используются в лаборатории.</div>
-<hr>
-<div style="text-align: center;">
-<p><span style="font-size:70%;">SECURE. CONTAIN. PROTECT.</span></p>
-</div>
-</div>
+
 </body>
 </html>
