--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://i.ibb.co/dW67VT2/lrp-big.png">
+  <link rel="icon" href="https://files.scpfoundation.net/local--files/sandbox:classic-theme/logo.png">
   <title>PRINCE | Авторская страница</title>
 </head>
 
@@ -11,6 +11,9 @@
 
 <html>
 <body>
+<div class='header'>
+  <div class='logo-header'><img src="https://files.scpfoundation.net/local--files/sandbox:classic-theme/logo.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>PRINCE</div><div class='text-header1'>Авторская страница</div></div>
+</div>
 
 </body>
 </html>
