--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <!--  Для тех, кто умеет пользоваться кодом элемента скажу, тут много интересного, просто надо поискать. !-->
 
 <html>
-<body>
+<body style='padding: 0 20px !important;margin: 20px 0 !important; backdrop-filter: hue-rotate(45deg);'>
 <div class='header'>
-  <div class='logo-header'><img src="https://files.scpfoundation.net/local--files/sandbox:classic-theme/logo.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>PRINCE</div><div class='text-header1'>Авторская страница</div></div>
+  <div class='logo-header' style='filter: hue-rotate(45deg);'><img src="https://files.scpfoundation.net/local--files/sandbox:classic-theme/logo.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>PRINCE</div><div class='text-header1'>Авторская страница</div></div>
 </div>
-
+<h2>Моя личная мусорка</h2>
 </body>
 </html>
