--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <div class='header'>
   <div class='logo-header'><img src="https://files.scpfoundation.net/local--files/sandbox:classic-theme/logo.png" width="100px" border="0"></div><div class='header-flex' style='filter: hue-rotate(45deg)';><div class='text-header'>PRINCE</div><div class='text-header1'>Авторская страница</div></div>
 </div>
+
+<div style='max-width: 1240px;'>
 <h2>Моя личная мусорка</h2>
-</body>
+Или что то типо того
+
+</div></body>
 </html>
