--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class='logo-header'><img src="https://files.scpfoundation.net/local--files/sandbox:classic-theme/logo.png" width="100px" border="0"></div><div class='header-flex' style='filter: hue-rotate(45deg)';><div class='text-header'>PRINCE</div><div class='text-header1'>Авторская страница</div></div>
 </div>
 
-<div style='max-width: 1240px;'>
+<div style='max-width: 1240px;margin: auto;'>
 <h2>Моя личная мусорка</h2>
 Или что то типо того
 
