--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div style='max-width: 1240px;margin: auto;'>
 <h2>Моя личная мусорка</h2>
 
-<div class='box'><a class='hub' href='https://klef-rp-site46.fandom.com/ru/wiki/Klef_RP_SITE-46'>Хаб "Межпространственный Кризис"</a><p><strong>Зона 46 пропала с радаров, но что насчет Зоны 46K?</strong></p><hr><p><i>Нам ещё предстоит понять почему это произошло, просто сейчас это не важно, важно лишь то, что у нас мало времени. Совет смотрителей находиться в крайнем замешательстве, либо они хорошо притворяются. Наша Зона - бомба замедленного действия.</i></p><div style='font-size: 70%; text-align: center;'>Из "Klef-RP_Project" - Совместно с Клеф (Вахуданос)</div></div>
+<div class='box'><div class='hub'><a href='https://klef-rp-site46.fandom.com/ru/wiki/Klef_RP_SITE-46'>Хаб "Межпространственный Кризис"</a></div><p><strong>Зона 46 пропала с радаров, но что насчет Зоны 46K?</strong></p><hr><p><i>Нам ещё предстоит понять почему это произошло, просто сейчас это не важно, важно лишь то, что у нас мало времени. Совет смотрителей находиться в крайнем замешательстве, либо они хорошо притворяются. Наша Зона - бомба замедленного действия.</i></p><div style='font-size: 70%; text-align: center;'>Из "Klef-RP_Project" - Совместно с Клеф (Вахуданос)</div></div>
 
 <!--  Низ !-->
 </div></body>
