--- a/index.html
+++ b/index.html
@@ -20,6 +20,30 @@
 
 <div class='box'><div class='hub'><a href='https://klef-rp-site46.fandom.com/ru/wiki/Klef_RP_SITE-46'>Хаб "Межпространственный Кризис"</a></div><p><strong>Зона 46 пропала с радаров, но что насчет Зоны 46K?</strong></p><hr><p><i>Нам ещё предстоит понять почему это произошло, просто сейчас это не важно, важно лишь то, что у нас мало времени. Совет смотрителей находиться в крайнем замешательстве, либо они хорошо притворяются. Наша Зона - бомба замедленного действия.</i></p><div style='font-size: 70%; text-align: center;'>Из "Klef-RP_Project" - Совместно с Клеф (Вахуданос)</div></div>
 
+<!-- Tab links -->
+<div class="tab">
+  <button class="tablinks" onclick="openCity(event, 'London')">London</button>
+  <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
+  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+</div>
+
+<!-- Tab content -->
+<div id="London" class="tabcontent">
+  <h3>London</h3>
+  <p>London is the capital city of England.</p>
+</div>
+
+<div id="Paris" class="tabcontent">
+  <h3>Paris</h3>
+  <p>Paris is the capital of France.</p>
+</div>
+
+<div id="Tokyo" class="tabcontent">
+  <h3>Tokyo</h3>
+  <p>Tokyo is the capital of Japan.</p>
+</div>
+
+
 <!--  Низ !-->
 </div></body>
 </html>
