--- a/index.html
+++ b/index.html
@@ -22,27 +22,42 @@
 
 <!-- Tab links -->
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'London')">London</button>
-  <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+  <button class="tablinks" onclick="openCity(event, 'London')">SCP объекты</button>
+  <button class="tablinks" onclick="openCity(event, 'Paris')">Рассказы</button>
+  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Хабы</button>
+  <button class="tablinks" onclick="openCity(event, 'Moscow')">Личное участие</button>
+  <button class="tablinks" onclick="openCity(event, 'Berlin')">Персонажи</button>
 </div>
 
 <!-- Tab content -->
 <div id="London" class="tabcontent">
-  <h3>London</h3>
+  <h3>SCP объекты</h3>
   <p>London is the capital city of England.</p>
 </div>
 
 <div id="Paris" class="tabcontent">
   <h3>Paris</h3>
-  <p>Paris is the capital of France.</p>
+  <p>Paris is the capital of France.</p> 
 </div>
 
 <div id="Tokyo" class="tabcontent">
   <h3>Tokyo</h3>
+<p>
+    <div class='box'><div class='hub'><a href='https://klef-rp-site46.fandom.com/ru/wiki/Klef_RP_SITE-46'>Хаб "Проект FC"</a></div><p><strong>На обломках империи, мы собрали всe</strong></p><hr><p><i>В 1991 году после распада СССР Фонду открылась возможность открыть свои филиалы на территории бывших республик. Было предложено множество проектов, долго шли переговоры с новыми властями, возникло множество проблем, включая саботаж враждебных организаций. В итоге был утверждён проект "FC", было начато строительство объектов. Первые Зона проекта в России, 80K, появилась уже в 2019 году.</i></p><div style='font-size: 70%; text-align: center;'>Из "Klef-RP_Project" - Совместно с Клеф (Вахуданос)</div></div>
+
+    <div class='box'><div class='hub'><a href='https://klef-rp-site46.fandom.com/ru/wiki/Klef_RP_SITE-46'>Хаб "Межпространственный Кризис"</a></div><p><strong>Зона 46 пропала с радаров, но что насчет Зоны 46K?</strong></p><hr><p><i>Нам ещё предстоит понять почему это произошло, просто сейчас это не важно, важно лишь то, что у нас мало времени. Совет смотрителей находиться в крайнем замешательстве, либо они хорошо притворяются. Наша Зона - бомба замедленного действия.</i></p><div style='font-size: 70%; text-align: center;'>Из "Klef-RP_Project" - Совместно с Клеф (Вахуданос)</div></div>
+</p>
+</div>
+
+<div id="Moscow" class="tabcontent">
+  <h3>Tokyo</h3>
   <p>Tokyo is the capital of Japan.</p>
 </div>
 
+<div id="Berlin" class="tabcontent">
+  <h3>Tokyo</h3>
+  <p>Tokyo is the capital of Japan.</p>
+</div>
 
 <!--  Низ !-->
 <script src="script.js"></script>
