--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 </div>
 
 <div style='max-width: 1240px;margin: auto;'>
-<h2>Моя личная мусорка</h2>
-
-<div class='box'><div class='hub'><a href='https://klef-rp-site46.fandom.com/ru/wiki/Klef_RP_SITE-46'>Хаб "Межпространственный Кризис"</a></div><p><strong>Зона 46 пропала с радаров, но что насчет Зоны 46K?</strong></p><hr><p><i>Нам ещё предстоит понять почему это произошло, просто сейчас это не важно, важно лишь то, что у нас мало времени. Совет смотрителей находиться в крайнем замешательстве, либо они хорошо притворяются. Наша Зона - бомба замедленного действия.</i></p><div style='font-size: 70%; text-align: center;'>Из "Klef-RP_Project" - Совместно с Клеф (Вахуданос)</div></div>
+<h1 style='color: #00aba8'>Моя личная мусорка</h1>
 
 <!-- Tab links -->
 <div class="tab">
@@ -43,7 +41,7 @@
 <div id="Tokyo" class="tabcontent">
   <h3>Tokyo</h3>
 <p>
-    <div class='box'><div class='hub'><a href='https://klef-rp-site46.fandom.com/ru/wiki/Klef_RP_SITE-46'>Хаб "Проект FC"</a></div><p><strong>На обломках империи, мы собрали всe</strong></p><hr><p><i>В 1991 году после распада СССР Фонду открылась возможность открыть свои филиалы на территории бывших республик. Было предложено множество проектов, долго шли переговоры с новыми властями, возникло множество проблем, включая саботаж враждебных организаций. В итоге был утверждён проект "FC", было начато строительство объектов. Первые Зона проекта в России, 80K, появилась уже в 2019 году.</i></p><div style='font-size: 70%; text-align: center;'>Из "Klef-RP_Project" - Совместно с Клеф (Вахуданос)</div></div>
+    <div class='box'><div class='hub'><a href='https://klef-rp-site46.fandom.com/ru/wiki/Klef_RP_SITE-46'>Хаб "Проект FC"</a></div><p><strong>На обломках империи, мы собрали всe, что могли.</strong></p><hr><p><i>В 1991 году после распада СССР Фонду открылась возможность открыть свои филиалы на территории бывших республик. Было предложено множество проектов, долго шли переговоры с новыми властями, возникло множество проблем, включая саботаж враждебных организаций. В итоге был утверждён проект "FC", было начато строительство объектов. Первые Зона проекта в России, 80K, появилась уже в 2019 году.</i></p><div style='font-size: 70%; text-align: center;'>Из "Klef-RP_Project" - Совместно с Клеф (Вахуданос)</div></div>
 
     <div class='box'><div class='hub'><a href='https://klef-rp-site46.fandom.com/ru/wiki/Klef_RP_SITE-46'>Хаб "Межпространственный Кризис"</a></div><p><strong>Зона 46 пропала с радаров, но что насчет Зоны 46K?</strong></p><hr><p><i>Нам ещё предстоит понять почему это произошло, просто сейчас это не важно, важно лишь то, что у нас мало времени. Совет смотрителей находиться в крайнем замешательстве, либо они хорошо притворяются. Наша Зона - бомба замедленного действия.</i></p><div style='font-size: 70%; text-align: center;'>Из "Klef-RP_Project" - Совместно с Клеф (Вахуданос)</div></div>
 </p>
