--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class='header'>
   <div class='logo-header'><img src="https://files.scpfoundation.net/local--files/sandbox:classic-theme/logo.png" width="100px" border="0"></div><div class='header-flex' style='filter: hue-rotate(45deg)';><div class='text-header'>PRINCE</div><div class='text-header1'>Авторская страница</div></div>
 </div>
-
+<!-- Страничка -->
 <div style='max-width: 1240px;margin: auto;'>
 <h1 style='color: #00aba8'>Моя личная мусорка</h1>
 
@@ -29,32 +29,32 @@
 
 <!-- Tab content -->
 <div id="London" class="tabcontent">
-  <h3>SCP объекты</h3>
-  <p>London is the capital city of England.</p>
+  <h3>SCP объекты, за моим личным авторством.</h3>
+  <p>SCP-351-N</p>
 </div>
 
 <div id="Paris" class="tabcontent">
-  <h3>Paris</h3>
-  <p>Paris is the capital of France.</p> 
+  <h3>Рассказы, за моим личным авторством.</h3>
+  <p>P</p> 
 </div>
 
 <div id="Tokyo" class="tabcontent">
-  <h3>Tokyo</h3>
+  <h3>Хабы, в которых я принимал участие.</h3>
 <p>
-    <div class='box'><div class='hub'><a href='https://klef-rp-site46.fandom.com/ru/wiki/Klef_RP_SITE-46'>Хаб "Проект FC"</a></div><p><strong>На обломках империи, мы собрали всe, что могли.</strong></p><hr><p><i>В 1991 году после распада СССР Фонду открылась возможность открыть свои филиалы на территории бывших республик. Было предложено множество проектов, долго шли переговоры с новыми властями, возникло множество проблем, включая саботаж враждебных организаций. В итоге был утверждён проект "FC", было начато строительство объектов. Первые Зона проекта в России, 80K, появилась уже в 2019 году.</i></p><div style='font-size: 70%; text-align: center;'>Из "Klef-RP_Project" - Совместно с Клеф (Вахуданос)</div></div>
+    <div class='box'><div class='hub'>Хаб "Проект FC"</div><p><strong>На обломках империи, мы собрали всe, что могли.</strong></p><hr><p><i>В 1991 году после распада СССР Фонду открылась возможность открыть свои филиалы на территории бывших республик. Было предложено множество проектов, долго шли переговоры с новыми властями, возникло множество проблем, включая саботаж враждебных организаций. В итоге был утверждён проект "FC", было начато строительство объектов. Первые Зона проекта в России, 80K, появилась уже в 2019 году.</i></p><div style='font-size: 70%; text-align: center;'>Из вселенной FunClub, за авторством /Paladic, LetoChan и других...</div></div>
 
     <div class='box'><div class='hub'><a href='https://klef-rp-site46.fandom.com/ru/wiki/Klef_RP_SITE-46'>Хаб "Межпространственный Кризис"</a></div><p><strong>Зона 46 пропала с радаров, но что насчет Зоны 46K?</strong></p><hr><p><i>Нам ещё предстоит понять почему это произошло, просто сейчас это не важно, важно лишь то, что у нас мало времени. Совет смотрителей находиться в крайнем замешательстве, либо они хорошо притворяются. Наша Зона - бомба замедленного действия.</i></p><div style='font-size: 70%; text-align: center;'>Из "Klef-RP_Project" - Совместно с Клеф (Вахуданос)</div></div>
 </p>
 </div>
 
 <div id="Moscow" class="tabcontent">
-  <h3>Tokyo</h3>
-  <p>Tokyo is the capital of Japan.</p>
+  <h3>Проекты, в которых я принимал участие.</h3>
+  <p>T</p>
 </div>
 
 <div id="Berlin" class="tabcontent">
-  <h3>Tokyo</h3>
-  <p>Tokyo is the capital of Japan.</p>
+  <h3>Персонажи, за моим личным авторством.</h3>
+  <p>T</p>
 </div>
 
 <!--  Низ !-->
