--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 <!-- Tab content -->
 <div id="London" class="tabcontent">
   <h2>SCP объекты, за моим личным авторством.</h2>
-  <p>SCP-351-N</p>
+  <p><img src="https://media.discordapp.net/attachments/880409662946676756/976455779777380403/esoteric.png" width='10px'><a href='/scp-351-n'>SCP-351-N</a> — Капкан<br>
+
+  </p>
 </div>
 
 <div id="Paris" class="tabcontent">
@@ -41,9 +43,9 @@
 <div id="Tokyo" class="tabcontent">
   <h2>Хабы, в которых я принимал участие.</h2>
 <p>
-    <div class='box'><div class='hub'>Хаб "Проект FC"</div><p><strong>На обломках империи, мы собрали всe, что могли.</strong></p><hr><p><i>В 1991 году после распада СССР Фонду открылась возможность открыть свои филиалы на территории бывших республик. Было предложено множество проектов, долго шли переговоры с новыми властями, возникло множество проблем, включая саботаж враждебных организаций. В итоге был утверждён проект "FC", было начато строительство объектов. Первые Зона проекта в России, 80K, появилась уже в 2019 году.</i></p><div style='font-size: 70%; text-align: center;'>Из вселенной FunClub, за авторством /Paladic, LetoChan и других...</div></div>
+    <div class='box'><div class='hub'>Хаб "Проект FC"</div><p><strong>На обломках империи, мы собрали всё, что могли.</strong></p><hr><p><i>В 1991 году после распада СССР Фонду открылась возможность открыть свои филиалы на территории бывших республик. Было предложено множество проектов, долго шли переговоры с новыми властями, возникло множество проблем, включая саботаж враждебных организаций. В итоге был утверждён проект "FC", было начато строительство объектов. Первые Зона проекта в России, 80K, появилась уже в 2019 году.</i></p><div style='font-size: 70%; text-align: center;'>Из вселенной FunClub, за авторством /Paladic, LetoChan и других...</div></div>
 
-    <div class='box'><div class='hub'><a href='https://klef-rp-site46.fandom.com/ru/wiki/Klef_RP_SITE-46'>Хаб "Межпространственный Кризис"</a></div><p><strong>Зона 46 пропала с радаров, но что насчет Зоны 46K?</strong></p><hr><p><i>Нам ещё предстоит понять почему это произошло, просто сейчас это не важно, важно лишь то, что у нас мало времени. Совет смотрителей находиться в крайнем замешательстве, либо они хорошо притворяются. Наша Зона - бомба замедленного действия.</i></p><div style='font-size: 70%; text-align: center;'>Из "Klef-RP_Project" - Совместно с Клеф (Вахуданос)</div></div>
+    <div class='box'><div class='hub'><a href='https://klef-rp-site46.fandom.com/ru/wiki/Klef_RP_SITE-46'>Хаб "Межпространственный Кризис"</a></div><p><strong>Зона 46 пропала с радаров, но что насчет Зоны 46K?</strong></p><hr><p><i>Нам ещё предстоит понять почему это произошло, просто сейчас это не важно, важно лишь то, что у нас мало времени. Совет смотрителей находится в крайнем замешательстве, либо они хорошо притворяются. Наша Зона - бомба замедленного действия.</i></p><div style='font-size: 70%; text-align: center;'>Из "Klef-RP_Project" - Совместно с Клеф (Вахуданос)</div></div>
 </p>
 </div>
 
