--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!-- Tab content -->
 <div id="London" class="tabcontent">
   <h2>SCP объекты, за моим личным авторством.</h2>
-  <p><img src="https://media.discordapp.net/attachments/880409662946676756/976455779777380403/esoteric.png" width='10px'><a href='/scp-351-n'>SCP-351-N</a> — Капкан<br>
+  <p><img src="https://files.scpfoundation.net/local--files/scp-list-ru/nonstandard.png" width='10px'><a href='/scp-351-n'>SCP-351-N</a> — Капкан<br>
 
   </p>
 </div>
