--- a/scp-351-n.html
+++ b/scp-351-n.html
@@ -2,15 +2,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://i.ibb.co/dW67VT2/lrp-big.png">
+  <link rel="stylesheet" href="SCP-351-N.css">
+  <link rel="icon" href="https://cdn.discordapp.com/attachments/904720639137566730/907540965810663424/scp-logo-ru-400-150x150.png">
   <title>Зона 78N Досье учреждения</title>
 </head>
 <html>
 <body>
   <!--- Хэдер -->
 <div class='header'>
-  <div class='logo-header'><img src="https://i.ibb.co/dW67VT2/lrp-big.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Российский Филиал</div></div>
+  <div class='logo-header'><img src="https://cdn.discordapp.com/attachments/904720639137566730/907540965810663424/scp-logo-ru-400-150x150.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Российский Филиал</div></div>
 </div>
 <!--- Заглавие --->
 <div style='max-width: 850px;margin: auto;'><h1>SCP-351-N - Капкан</h1></div>
