--- a/scp-351-n.html
+++ b/scp-351-n.html
@@ -2,9 +2,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
-  <link rel="stylesheet" href="SCP-351-N.css">
+  <link rel="stylesheet" href="scp-351-n.css">
   <link rel="icon" href="https://cdn.discordapp.com/attachments/904720639137566730/907540965810663424/scp-logo-ru-400-150x150.png">
-  <title>Зона 78N Досье учреждения</title>
+  <title>SCP-351-N - Капкан</title>
 </head>
 <html>
 <body>
