--- a/scp-351-n.html
+++ b/scp-351-n.html
@@ -13,12 +13,19 @@
   <div class='logo-header'><img src="https://cdn.discordapp.com/attachments/904720639137566730/907540965810663424/scp-logo-ru-400-150x150.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Российский Филиал</div></div>
 </div>
 <!--- Заглавие --->
-<div style='max-width: 850px;margin: auto;'><h1>SCP-351-N - Капкан</h1></div>
+<div style='max-width: 850px;margin: auto;'>
+  <h1>SCP-351-N - Капкан</h1></div>
 <!--- База --->
+
+<div class='apcs-container'>
   
+<div>
+
+<!--- SCP --->
 <hr>
-<div style="text-align: center;">
-<p><span style="font-size:70%;">SECURE. CONTAIN. PROTECT.</span></p>
+<div style="text-align: center;"><p><span style="font-size:70%;">SECURE. CONTAIN. PROTECT.</span></p></div>
+<!--- Дивка маргина --->
 </div>
+<!--- Script --->
 </body>
 </html>
