--- a/scp-351-n.html
+++ b/scp-351-n.html
@@ -14,12 +14,16 @@
 </div>
 <!--- Заглавие --->
 <div style='max-width: 850px;margin: auto;'>
-  <h1>SCP-351-N - Капкан</h1></div>
+  <h1>SCP-351-N - Капкан</h1>
 <!--- База --->
 
 <div class='apcs-container'>
   
-<div>
+</div>
+<strong>Объект №:</strong> SCP-351-N
+<strong>Особые условия содержания:</strong> Содержание невозможно ввиду специфики объекта. Полевые агенты фонда должны вести наблюдение в районах возможной активности объекта и докладывать о случаях похожих по описанию на поражение аномалией своему руководителю. На подтверждённые случаи уполномочены отвечать подразделения МОГ Lambda-5 "Белые кролики". За дезинформацию населения а так же за прикрытие в случае неудачной операции по пресечению аномалии несут ответственность агенты МОГ Gamma-5 "Ложный след".
+
+<strong>Описание:</strong> SCP-351-N —
 
 <!--- SCP --->
 <hr>
