--- a/scp-351-n.html
+++ b/scp-351-n.html
@@ -18,12 +18,15 @@
 <!--- База --->
 
 <div class='apcs-container'>
-  
+  <div class='apcs-main-content'>
+    <div class="apcs-header"><div style='font-size: 36px;line-height: 36px;'>CONFIDENTIAL</div><div class="apcs-text-lines">Содержание невозможно<br>канд. наук Лисицын</div>
+    </div>
+  </div>
 </div>
-<strong>Объект №:</strong> SCP-351-N
-<strong>Особые условия содержания:</strong> Содержание невозможно ввиду специфики объекта. Полевые агенты фонда должны вести наблюдение в районах возможной активности объекта и докладывать о случаях похожих по описанию на поражение аномалией своему руководителю. На подтверждённые случаи уполномочены отвечать подразделения МОГ Lambda-5 "Белые кролики". За дезинформацию населения а так же за прикрытие в случае неудачной операции по пресечению аномалии несут ответственность агенты МОГ Gamma-5 "Ложный след".
+<p><strong>Объект №:</strong> SCP-351-N</p>
+<p><strong>Особые условия содержания:</strong> Содержание невозможно ввиду специфики объекта. Полевые агенты фонда должны вести наблюдение в районах возможной активности объекта и докладывать о случаях похожих по описанию на поражение аномалией своему руководителю. На подтверждённые случаи уполномочены отвечать подразделения МОГ Lambda-5 "Белые кролики". За дезинформацию населения а так же за прикрытие в случае неудачной операции по пресечению аномалии несут ответственность агенты МОГ Gamma-5 "Ложный след".</p>
 
-<strong>Описание:</strong> SCP-351-N —
+<p><strong>Описание:</strong> SCP-351-N — </p>
 
 <!--- SCP --->
 <hr>
