--- a/scp-351-n.html
+++ b/scp-351-n.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <link href="https://allfont.ru/allfont.css?fonts=bauhaus-bold-bt" rel="stylesheet" type="text/css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
   <link rel="stylesheet" href="scp-351-n.css">
