--- a/scp-351-n.html
+++ b/scp-351-n.html
@@ -20,7 +20,7 @@
 
 <div class='apcs-container'>
   <div class='apcs-main-content'>
-    <div class="apcs-header"><div style='font-size: 36px;line-height: 36px;'>CONFIDENTIAL</div><div class="apcs-text-lines">Содержание невозможно<br>канд. наук Лисицын</div>
+    <div class="apcs-header"><div class='apcs-txt'>CONFIDENTIAL</div><div class="apcs-text-lines">Содержание невозможно<br>канд. наук Лисицын</div>
     </div>
   </div>
 </div>
