--- a/scp-351-n.html
+++ b/scp-351-n.html
@@ -20,7 +20,7 @@
 
 <div class='apcs-container'>
   <div class='apcs-main-content'>
-    <div class="apcs-header"><div class='apcs-txt'>CONFIDENTIAL</div><div class="apcs-text-lines"><strong>Специфика:</strong> Содержание невозможно<br><strong>Куратор:</strong> канд. наук Лисицын</div>
+    <div class="apcs-header"><div class='apcs-txt'>SECRET</div><div class="apcs-text-lines"><strong>Специфика:</strong> Содержание невозможно<br><strong>Куратор:</strong> канд. наук Лисицын</div>
     </div>
   </div>
 </div>
