--- a/scp-351-n.html
+++ b/scp-351-n.html
@@ -17,10 +17,16 @@
 <div style='max-width: 850px;margin: auto;'>
   <h1>SCP-351-N - Капкан</h1>
 <!--- База --->
-
 <div class='apcs-container'>
   <div class='apcs-main-content'>
     <div class="apcs-header"><div class='apcs-txt'>SECRET</div><div class="apcs-text-lines"><strong>Специфика:</strong> Содержание невозможно<br><strong>Куратор:</strong> канд. наук Лисицын</div>
+    <div class='apcs-hazards'>
+      <div class='apcs-hazard'><img href='https://cdn.discordapp.com/attachments/880409662946676756/1090043669945528380/5253c0d437f6e83f.png' width='100'></div>
+      <div class='apcs-hazard'><img href='https://cdn.discordapp.com/attachments/880409662946676756/1090043669945528380/5253c0d437f6e83f.png' width='100'></div>
+      <div class='apcs-hazard'><img href='https://cdn.discordapp.com/attachments/880409662946676756/1090043669945528380/5253c0d437f6e83f.png' width='100'></div>
+      <div class='apcs-hazard'><img href='https://cdn.discordapp.com/attachments/880409662946676756/1090043669945528380/5253c0d437f6e83f.png' width='100'></div>
+      <div class='apcs-hazard'><img href='https://cdn.discordapp.com/attachments/880409662946676756/1090043669945528380/5253c0d437f6e83f.png' width='100'></div>
+    </div>
     </div>
   </div>
 </div>
