--- a/scp-351-n.html
+++ b/scp-351-n.html
@@ -22,11 +22,11 @@
     <div class="apcs-header"><div class='apcs-txt'>SECRET</div><div class="apcs-text-lines"><strong>Специфика:</strong> Содержание невозможно<br><strong>Куратор:</strong> канд. наук Лисицын</div>
     </div>
     <div class='apcs-hazards'>
-      <div class='apcs-hazard'><img href='https://cdn.discordapp.com/attachments/880409662946676756/1090043669945528380/5253c0d437f6e83f.png' width='100'></div>
-      <div class='apcs-hazard'><img href='https://cdn.discordapp.com/attachments/880409662946676756/1090043669945528380/5253c0d437f6e83f.png' width='100'></div>
-      <div class='apcs-hazard'><img href='https://cdn.discordapp.com/attachments/880409662946676756/1090043669945528380/5253c0d437f6e83f.png' width='100'></div>
-      <div class='apcs-hazard'><img href='https://cdn.discordapp.com/attachments/880409662946676756/1090043669945528380/5253c0d437f6e83f.png' width='100'></div>
-      <div class='apcs-hazard'><img href='https://cdn.discordapp.com/attachments/880409662946676756/1090043669945528380/5253c0d437f6e83f.png' width='100'></div>
+      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" alt="hazard" title='test' border="0"></div>
+      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" alt="hazard" title='test' border="0"></div>
+      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" alt="hazard" title='test' border="0"></div>
+      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" alt="hazard" title='test' border="0"></div>
+      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" alt="hazard" title='test' border="0"></div>
     </div>
   </div>
 </div>
