--- a/scp-351-n.html
+++ b/scp-351-n.html
@@ -2,7 +2,7 @@
 <head>
   <link href="https://allfont.ru/allfont.css?fonts=bauhaus-bold-bt" rel="stylesheet" type="text/css" />
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=0.8" />
+  <meta name="viewport" content="width=device-width, initial-scale=0.7" />
   <link rel="stylesheet" href="scp-351-n.css">
   <link rel="icon" href="https://cdn.discordapp.com/attachments/904720639137566730/907540965810663424/scp-logo-ru-400-150x150.png">
   <title>SCP-351-N - Капкан</title>
@@ -22,11 +22,11 @@
     <div class="apcs-header"><div class='apcs-txt'>SECRET</div><div class="apcs-text-lines"><strong>Специфика:</strong> Содержание невозможно<br><strong>Куратор:</strong> канд. наук Лисицын</div>
     </div>
     <div class='apcs-hazards'>
-      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" alt="hazard" title='test' border="0"></div>
-      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" alt="hazard" title='test' border="0"></div>
-      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" alt="hazard" title='test' border="0"></div>
-      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" alt="hazard" title='test' border="0"></div>
-      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" alt="hazard" title='test' border="0"></div>
+      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" width='100%' alt="hazard" title='test' border="0"></div>
+      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" width='100%' alt="hazard" title='test' border="0"></div>
+      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" width='100%' alt="hazard" title='test' border="0"></div>
+      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" width='100%' alt="hazard" title='test' border="0"></div>
+      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" width='100%' alt="hazard" title='test' border="0"></div>
     </div>
   </div>
 </div>
