--- a/scp-351-n.html
+++ b/scp-351-n.html
@@ -28,6 +28,7 @@
       <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" width='100%' alt="hazard" title='test' border="0"></div>
       <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" width='100%' alt="hazard" title='test' border="0"></div>
     </div>
+    <div class='apcs-class'>U</div>
   </div>
 </div>
 <p><strong>Объект №:</strong> SCP-351-N</p>
