--- a/scp-351-n.html
+++ b/scp-351-n.html
@@ -34,7 +34,7 @@
       <div class='apcs-info-risk'>ТЕСТ</div>
       <div class='apcs-info-vedist'>Tiesto</div>
       <div class="apcs-info-number">SCP-351-N</div>
-    <div>
+    </div>
   </div>
 </div>
 <p><strong>Объект №:</strong> SCP-351-N</p>
