--- a/scp-351-n.html
+++ b/scp-351-n.html
@@ -30,9 +30,9 @@
     </div>
     <div class='apcs-class'><div style='line-height: 1em;'>U</div><div style='font-family: monospace;font-size: xx-small;line-height: 1em;'>uncontained</div></div>
     <div class='apcs-info'>
-      <div class='apcs-info-activation'>Тест</div>
-      <div class='apcs-info-risk'>ТЕСТ</div>
-      <div class='apcs-info-vedist'>Tiesto</div>
+      <div class='apcs-info-activation'>Нестабильный</div>
+      <div class='apcs-info-risk'>Ȼ</div>
+      <div class='apcs-info-vedist'>Vedist IV</div>
       <div class="apcs-info-number">SCP-351-N</div>
     </div>
   </div>
